# dff

./: .gitignore  README.md  client.go  go.mod  jitpack.yml  server.go
.github/workflows/: publish.yml
examples/golang/client/: go.mod  go.sum  main.go
examples/golang/server/: go.mod  go.sum  main.go
examples/java/: Makefile  pom.xml
examples/java/src/main/java/com/example/: DffExample.java  ExampleClient.java
examples/nim/: client  client.nim
examples/python/: client.py  server.py
examples/rust/client/: Cargo.toml
examples/rust/client/src/: main.rs
examples/rust/server/: .gitignore  Cargo.toml
examples/rust/server/src/: main.rs
golang/: client.go  server.go
java/: README.md  pom.xml
java/src/main/java/com/github/jtraglia/dff/: Client.java  ProcessFunc.java  SharedMemory.java
nim/: README.md  client.nim  dff.nimble
nim/dff/: client.nim
python/: README.md  pyproject.toml
python/dff/: __init__.py  client.py  server.py  shm.py
rust/: Cargo.toml
rust/src/: client.rs  lib.rs  server.rs
