[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dff"
version = "0.1.0"
description = "A simple differential fuzzing framework"
readme = "README.md"
authors = [
    {name = "Justin Traglia", email = "jtraglia@pm.me"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
keywords = ["fuzzing", "differential", "testing", "security"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/jtraglia/dff"
Repository = "https://github.com/jtraglia/dff"
Issues = "https://github.com/jtraglia/dff/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.990",
    "ruff>=0.0.270",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dff*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true