[package]
name = "dff"
version = "0.1.9"
edition = "2021"
authors = ["Justin Traglia"]
description = "Differential Fuzzing Framework"
license = "MIT"
repository = "https://github.com/jtraglia/dff"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
libc = "0.2"
thiserror = "2.0"
log = "0.4"
hex = "0.4"
futures = "0.3"

[lib]
name = "dff"
path = "src/lib.rs"
